--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <a href="age-calculator.html">
                         <ul>*Age-Calculator</ul>
                     </a>
+                    <a href="BMI-calculator.html">
+                        <ul>*BMI[BODY MASS INDEX]-Calculator</ul>
+                    </a>
         </div>
     </body>
 </html>
